packages/build/tests/error/fixtures/exception_string/plugin.js
export default {
  onPreBuild() {
    // eslint-disable-next-line no-throw-literal
    throw 'test'
  },
}
